<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_margin="5dp">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/cv"
        android:gravity="center"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageViewImage"
                android:layout_marginRight="10dp"
                android:layout_width="100dp"
                android:scaleType="centerInside"
                android:layout_height="100dp" />



            <TextView
                android:id="@+id/textViewName"
                android:textSize="15sp"
                android:text="@string/label_name"
                android:layout_toRightOf="@+id/imageViewImage"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <TextView
                android:id="@+id/textViewUnitaryValue"
                android:textSize="15sp"
                android:text="@string/label_unitary_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewName"
                android:layout_alignLeft="@+id/textViewName"
                android:layout_alignStart="@+id/textViewName" />


            <TextView
                android:id="@+id/textViewAmount"
                android:textSize="15sp"
                android:text="@string/label_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewUnitaryValue"
                android:layout_alignLeft="@+id/textViewUnitaryValue"
                android:layout_alignStart="@+id/textViewUnitaryValue" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>